Bug 25119 - Leaks DBusGMethodInvocation if no_reply is set.
Summary: Leaks DBusGMethodInvocation if no_reply is set.
Status: RESOLVED FIXED
Alias: None
Product: dbus
Classification: Unclassified
Component: GLib (show other bugs)
Version: unspecified
Hardware: Other All
: medium normal
Assignee: Rob Taylor
QA Contact: John (J5) Palmieri
URL:
Whiteboard:
Keywords: patch
Depends on:
Blocks:
 
Reported: 2009-11-16 05:36 UTC by Will Thompson
Modified: 2009-11-16 08:02 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments
Don't leak DBusGMethodInvocation for no-reply calls (1.94 KB, patch)
2009-11-16 05:38 UTC, Will Thompson
Details | Splinter Review

Description Will Thompson 2009-11-16 05:36:47 UTC
I just noticed in passing that dbus_g_method_return and _error leak the DBusGMethodInvocation if no_reply was set on the method call.
Comment 1 Will Thompson 2009-11-16 05:38:06 UTC
Created attachment 31231 [details] [review]
Don't leak DBusGMethodInvocation for no-reply calls
Comment 2 Colin Walters 2009-11-16 07:51:25 UTC
(In reply to comment #1)
> Created an attachment (id=31231) [details]
> Don't leak DBusGMethodInvocation for no-reply calls

Looks good, thanks!
Comment 3 Will Thompson 2009-11-16 08:02:05 UTC
Pushed to master; thanks for the swift review!


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.