Don't leak DBusGMethodInvocation for no-reply calls

https://bugs.freedesktop.org/show_bug.cgi?id=25119